Fix alignment of messages with emotes

--- a/thrimbletrimmer/styles/thrimbletrimmer.css
+++ b/thrimbletrimmer/styles/thrimbletrimmer.css
@@ -356,6 +356,7 @@ a,
 
 .chat-replay-message {
 	display: flex;
+	align-items: baseline;
 	gap: 10px;
 }
 
